# Table2Dict

./: README.md  pyproject.toml
src/Table2Dict_Cap0n3/: Table2Dict.py
src/cap0n3-Table2Dict/: Table2Dict.py
src/cap0n3-TableToDict/: Table2Dict.py
tests/: Testing.py  randomTesting.py
tests/Test_Wiki_Table/Test_Tables/: debugTable_case7.html
